--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
+    "clsx": "^2.1.1",
     "modern-normalize": "^3.0.1",
     "next": "15.5.5",
     "react": "19.2.0",
@@ -16,7 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "24.7.2",
-    "eslint": "^9.37.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.5.5",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
