--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
+    "@hookform/resolvers": "^5.2.2",
     "clsx": "^2.1.1",
+    "joi": "^18.0.1",
     "modern-normalize": "^3.0.1",
     "next": "15.5.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.65.0"
   },
   "devDependencies": {
     "@types/node": "24.7.2",
