--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.5.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.65.0"
+    "react-hook-form": "^7.65.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@types/node": "24.7.2",
