--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
+    "react-paginate": "^8.3.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
