--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
     "react-paginate": "^8.3.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
